# hudl-test

./: README.md  pyproject.toml
tests/: test_hudl_login.py
